<resources>
    <string name="app_name">My Yelp</string>
    <string name="review_ph">%d Reviews</string>
    <string name="new_search">New Search</string>
    <string name="image_of_business">Image Of Business</string>
    <string name="term">Term</string>
    <string name="location">Location:</string>
    <string name="categories">Categories:</string>
    <string name="search">Search</string>
    <string name="key_search">searchKey</string>
    <string name="theme_switch">themeSwitch</string>


    <!--    api utils-->
        <string name="base_url">https://api.yelp.com/v3/</string>
        <string name="api_key">_45em3yx8PMHlBvUty-dl0HXu7Zigfmgy3Sle2AfLgyySJ4-ppNY_1d8o7MU-G8CmRMgyLzOXURiLCadUoQGF2bT0ESrGTlIGkjdmS6aok1wbZSzDpAhD2uC2otCZHYx</string>
        <string name="authorization">Bearer %s</string>

        <string-array name="locations_array">
            <item>Amsterdam</item>
            <item>Atlanta</item>
            <item>Austin</item>
            <item>Berlin</item>
            <item>Boston</item>
            <item>Chicago</item>
            <item>Dallas</item>
            <item>Denver</item>
            <item>Detroit</item>
            <item>Dublin</item>
            <item>Honolulu</item>
            <item>Houston</item>
            <item>Las Vegas</item>
            <item>London</item>
            <item>Los Angeles</item>
            <item>Madrid</item>
            <item>Miami</item>
            <item>Minneapolis</item>
            <item>New York</item>
            <item>Oakland</item>
            <item>Palo Alto</item>
            <item>Paris</item>
            <item>Philadelphia</item>
            <item>Portland</item>
            <item>Saint Louis</item>
            <item>San Diego</item>
            <item>San Francisco</item>
            <item>San Jose</item>
            <item>Seattle</item>
            <item>Toronto</item>
            <item>Vancouver</item>
            <item>Washington, DC</item>
        </string-array>

        <!--    categories-->
        <string name="pizza">Pizza</string>
        <string name="cafes">Cafes</string>
        <string name="bars">Bars</string>
        <string name="indian">indian</string>
        <string name="salad">Salad</string>
        <string name="donuts">Donuts</string>
        <string name="seafood">Seafood</string>
        <string name="sandwich">Sandwich</string>
</resources>