<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewSearchActivity">

    <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/etTerm"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@+id/etTerm"
            android:layout_marginTop="40dp" />

    <TextView
            android:text="@string/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="40dp" />

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/locationSpinner"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            android:spinnerMode="dropdown"
            android:layout_marginStart="15dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etTerm"
            android:hint="@string/term"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:autofillHints="" />

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="clip_horizontal"
            android:id="@+id/tableLayout">

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <CheckBox
                    android:text="@string/pizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbPizza"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="5dp" />

            <CheckBox
                    android:text="@string/cafes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbCafes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="5dp" />

            <CheckBox
                    android:text="@string/salad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbSalad"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="5dp" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <CheckBox
                    android:text="@string/sandwich"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbSandwich"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="5dp" />

            <CheckBox
                    android:text="@string/donuts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbDonuts"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="5dp" />

            <CheckBox
                    android:text="@string/bars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbBars"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="5dp" />

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <CheckBox
                    android:text="@string/indian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbIndian"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="5dp" />

            <CheckBox
                    android:text="@string/seafood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbSeafood"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="5dp" />
        </TableRow>

    </TableLayout>

    <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</androidx.constraintlayout.widget.ConstraintLayout>