<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/etTerm"
                android:hint="@string/term"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:autofillHints=""
                style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
                android:singleLine="true"
                android:ems="7" />

        <Button
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchButton"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/locationSpinner"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toTopOf="@+id/tvLocation"
                app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
                app:layout_constraintStart_toEndOf="@+id/tvLocation" />

        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCategories"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="clip_horizontal"
                android:id="@+id/tableLayout">

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <CheckBox
                        android:text="@string/pizza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbPizza"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_margin="5dp" />

                <CheckBox
                        android:text="@string/cafes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbCafes"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_margin="5dp" />

                <CheckBox
                        android:text="@string/salad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbSalad"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_margin="5dp" />

            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <CheckBox
                        android:text="@string/sandwich"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbSandwich"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_margin="5dp" />

                <CheckBox
                        android:text="@string/donuts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbDonuts"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_margin="5dp" />

                <CheckBox
                        android:text="@string/bars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbBars"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_margin="5dp" />

            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <CheckBox
                        android:text="@string/indian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbIndian"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_margin="5dp" />

                <CheckBox
                        android:text="@string/seafood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbSeafood"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_margin="5dp" />
            </TableRow>

        </TableLayout>

        <TextView
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCategories"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toBottomOf="@id/tvLocation"
                android:layout_marginTop="20dp"
                android:layout_marginStart="4dp" />

        <TextView
                android:text="@string/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLocation"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toEndOf="@+id/etTerm"
                app:layout_constraintBottom_toBottomOf="@+id/etTerm"
                app:layout_constraintTop_toTopOf="@+id/etTerm"
                android:layout_marginStart="5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/rvSearchedBusinesses"
            app:layout_constraintTop_toBottomOf="@+id/clSearch">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>